--- a/style.css
+++ b/style.css
@@ -2,17 +2,13 @@ body {
     background-color: #121212;
     color: rgb(119, 36, 36);
 }
-.sidebar {
-    background-color: #181818;
-    height: 100vh;
-    padding: 20px;
-}
+
 .main-content {
     padding: 20px;
 }
 .card-header {
     background-color: #d9534f;
-    color: rgb(129, 16, 16);
+    color: rgb(226, 56, 56);
 }
 .btn-custom {
     background-color: #d9534f;
@@ -23,3 +19,37 @@ body {
     background-color: #dc3545; /* Vermelho Bootstrap */
     color: rgb(183, 61, 61);
 }
+
+.info-container {
+    background-color: #bea6a6;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    border-radius: 8px;
+    border: 1px solid #fff;
+}
+h4,h2 {
+    color: #d9534f;
+    text-align: center;
+}
+
+
+
+.footer {
+    background-color: #343a40;
+    color: white;
+    text-align: center;
+   ;
+    }
+    
+
+.container-fluid {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; /* Faz o conteúdo ocupar a altura total da tela */
+}
+
+.main-content {
+    flex: 1; /* Faz o conteúdo ocupar o máximo possível do espaço */
+}
+
