--- a/style.css
+++ b/style.css
@@ -1,7 +1,19 @@
 body {
-    background-color: #121212;
+    background-color: #313030;
     color: rgb(119, 36, 36);
+ 
 }
+
+
+.sidebar {
+    background-color: #313030; 
+    background-image: url('/img/aws.jpg'); /* Substitua pelo caminho correto da imagem */
+    background-size: cover; /* Ajusta a imagem para cobrir toda a área */
+    background-position: center; /* Centraliza a imagem */
+    background-repeat: no-repeat; /* Evita repetição da imagem */
+    background-attachment: fixed; /* Fixa a imagem na tela */
+}
+
 
 .main-content {
     padding: 20px;
@@ -33,19 +45,16 @@ h4,h2 {
     text-align: center;
 }
 
-
-
 .footer {
     background-color: #343a40;
     color: white;
     text-align: center;
-   ;
+   
     }
-    
 
 .container-fluid {
     display: flex;
-    flex-direction: column;
+   
     min-height: 100vh; /* Faz o conteúdo ocupar a altura total da tela */
 }
 
@@ -56,3 +65,4 @@ h4,h2 {
 #titulo-exercicios {
     display: none;
 }
+
