atualizando pasta e revisao do site

--- a/style.css
+++ b/style.css
@@ -8,9 +8,7 @@ body {
     background-attachment: fixed;
     
 }
-
-
-
+s
 .sidebar {
     background-image:url('./img/aws1.png');
     background-size: cover;
